--- a/index.html
+++ b/index.html
@@ -12,13 +12,47 @@
 
 <body>
 
-  <div class="grid-container">
+<!-- original div -->
+  <!-- <div class="grid-container">
 
     <div class="first-child"></div>
 
     <div class="second-child"></div>
 
     <div class="third-child"></div>
+
+  </div> -->
+
+<!-- things that stay put. -->
+  <div class="modal" id="modal">
+
+    <div class="grid-container">
+
+      <div class="first-child"></div>
+
+      <div class="second-child"></div>
+
+      <div class="third-child"></div>
+
+    </div>
+
+<!-- scrollabjle text -->
+    <!-- <div class="scrollable">
+      <h1>Blah</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+      nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+      sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+      nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+      sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div> -->
 
   </div>
 
