Started the pages.

--- a/index.html
+++ b/index.html
@@ -12,29 +12,43 @@
 
 <body>
 
-<!-- original div -->
-  <!-- <div class="grid-container">
-
-    <div class="first-child"></div>
-
-    <div class="second-child"></div>
-
-    <div class="third-child"></div>
-
-  </div> -->
-
-<!-- things that stay put. -->
+<!-- ========== modal ========== -->
   <div class="modal" id="modal">
 
-    <div class="grid-container">
 
-      <div class="first-child"></div>
+<!-- ========== start container ========== -->
+    <div class="start-grid-container">
 
-      <div class="second-child"></div>
+      <div class="start-first-child"></div>
 
-      <div class="third-child"></div>
+      <div class="start-second-child"></div>
+
+      <div class="start-third-child"></div>
 
     </div>
+
+<!-- ========== page container ========== -->
+    <!-- <div class="page-grid-container" >
+
+      <div class="first-page-child">page1</div>
+
+      <div class="second-page-child">page2</div>
+
+      <div class="third-page-child">page3</div>
+
+    </div> -->
+
+
+<!-- ========== death container ========== -->
+    <!-- <div class="death-gird-container">
+
+      <div class="first-death-child">death1</div>
+
+      <div class="second-death-child">death2</div>
+
+      <div class="third-death-child">dath3</div>
+
+    </div> -->
 
 <!-- scrollabjle text -->
     <!-- <div class="scrollable">
