End of class commit w06d01

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,48 +7,60 @@
   <link rel="stylesheet" href="css/style.css">
   <script defer src="js/script.js"></script>
 </head>
-
 <body>
-
-<!-- ========== modal ========== -->
+  <!-- ========== modal ========== -->
   <div class="modal" id="modal">
-
-
-<!-- ========== start container ========== -->
-    <div class="start-grid-container">
-
-      <div class="start-first-child"></div>
-
-      <div class="start-second-child"></div>
-
-      <div class="start-third-child"></div>
-
+    <!-- ========== flex container ========== -->
+    <div id="start-page" class="page">
+      <div class="first">1</div>
+      <div class="second">2</div>
+      <div class="third">3</div>
     </div>
-
-<!-- ========== page container ========== -->
-    <!-- <div class="page-grid-container" >
-
-      <div class="first-page-child">page1</div>
-
-      <div class="second-page-child">page2</div>
-
-      <div class="third-page-child">page3</div>
-
-    </div> -->
-
-
-<!-- ========== death container ========== -->
-    <!-- <div class="death-gird-container">
-
-      <div class="first-death-child">death1</div>
-
-      <div class="second-death-child">death2</div>
-
-      <div class="third-death-child">dath3</div>
-
-    </div> -->
-
+    <!-- page 1 -->
+    <div id="page-one" class="page">
+      <!-- left column -->
+      <div class="left-column">
+        <div class="first">page # 1</div>
+        <div class="second">2</div>
+        <div class="third">3</div>
+      </div>
+      <!-- right column -->
+      <div class="right-column">
+        <div class="fourth">4</div>
+        <div class="fifth">5</div>
+        <div class="sixth">6</div>
+      </div>
+    </div>
+    <!-- page 2 -->
+    <div id="page-two" class="page">
+      <!-- left column -->
+      <div class="left-column">
+        <div class="first">1</div>
+        <div class="second">2</div>
+        <div class="third">3</div>
+      </div>
+      <!-- right column -->
+      <div class="right-column">
+        <div class="fourth">4</div>
+        <div class="fifth">5</div>
+        <div class="sixth">6</div>
+      </div>
+    </div>
+    <!-- page 3 -->
+    <div id="page-three" class="page">
+      <!-- left column -->
+      <div class="left-column">
+        <div class="first">1</div>
+        <div class="second">2</div>
+        <div class="third">3</div>
+      </div>
+      <!-- right column -->
+      <div class="right-column">
+        <div class="fourth">4</div>
+        <div class="fifth">5</div>
+        <div class="sixth">6</div>
+      </div>
+    </div>
   </div>
-
 </body>
 </html>
