--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
   <div class="modal" id="modal">
     <!-- ========== flex container ========== -->
     <div id="start-page" class="page">
-      <div class="first">1</div>
-      <div class="second">2</div>
-      <div class="third">3</div>
+      <div class="first"></div>
+      <div class="second"></div>
+      <div class="third"></div>
     </div>
     <!-- page 1 -->
     <div id="page-one" class="page">
       <!-- left column -->
       <div class="left-column">
-        <div class="first">page # 1</div>
-        <div class="second">2</div>
-        <div class="third">3</div>
+        <div class="first"></div>
+        <div class="second"></div>
+        <div class="third"></div>
       </div>
       <!-- right column -->
       <div class="right-column">
-        <div class="fourth">4</div>
-        <div class="fifth">5</div>
-        <div class="sixth">6</div>
+        <div class="fourth"></div>
+        <div class="fifth"></div>
+        <div class="sixth"></div>
       </div>
     </div>
     <!-- page 2 -->
