--- a/index.html
+++ b/index.html
@@ -12,53 +12,50 @@
   <div class="modal" id="modal">
     <!-- ========== flex container ========== -->
     <div id="start-page" class="page">
-      <div class="first"></div>
-      <div class="second"></div>
-      <div class="third"></div>
+      <div class="title-sector"></div>
+      <div class="content-sector"></div>
+      <div class="button-sector"></div>
     </div>
     <!-- page 1 -->
     <div id="page-one" class="page">
       <!-- left column -->
       <div class="left-column">
         <div class="first"></div>
-        <div class="second"></div>
+        <div class="second">Item List:</div>
         <div class="third"></div>
       </div>
       <!-- right column -->
       <div class="right-column">
         <div class="fourth"></div>
         <div class="fifth"></div>
-        <div class="sixth"></div>
       </div>
     </div>
     <!-- page 2 -->
     <div id="page-two" class="page">
       <!-- left column -->
       <div class="left-column">
-        <div class="first">1</div>
-        <div class="second">2</div>
-        <div class="third">3</div>
+        <div class="first"></div>
+        <div class="second">Item List:</div>
+        <div class="third"></div>
       </div>
       <!-- right column -->
       <div class="right-column">
-        <div class="fourth">4</div>
-        <div class="fifth">5</div>
-        <div class="sixth">6</div>
+        <div class="fourth"></div>
+        <div class="fifth"></div>
       </div>
     </div>
     <!-- page 3 -->
     <div id="page-three" class="page">
       <!-- left column -->
       <div class="left-column">
-        <div class="first">1</div>
-        <div class="second">2</div>
-        <div class="third">3</div>
+        <div class="first"></div>
+        <div class="second">Item List:</div>
+        <div class="third"></div>
       </div>
       <!-- right column -->
       <div class="right-column">
-        <div class="fourth">4</div>
-        <div class="fifth">5</div>
-        <div class="sixth">6</div>
+        <div class="fourth"></div>
+        <div class="fifth"></div>
       </div>
     </div>
   </div>
