--- a/index.html
+++ b/index.html
@@ -17,35 +17,7 @@
       <div class="button-sector"></div>
     </div>
     <!-- page 1 -->
-    <div id="page-one" class="page">
-      <!-- left column -->
-      <div class="left-column">
-        <div class="first"></div>
-        <div class="second">Item List:</div>
-        <div class="third"></div>
-      </div>
-      <!-- right column -->
-      <div class="right-column">
-        <div class="fourth"></div>
-        <div class="fifth"></div>
-      </div>
-    </div>
-    <!-- page 2 -->
-    <div id="page-two" class="page">
-      <!-- left column -->
-      <div class="left-column">
-        <div class="first"></div>
-        <div class="second">Item List:</div>
-        <div class="third"></div>
-      </div>
-      <!-- right column -->
-      <div class="right-column">
-        <div class="fourth"></div>
-        <div class="fifth"></div>
-      </div>
-    </div>
-    <!-- page 3 -->
-    <div id="page-three" class="page">
+    <div id="page-one" class="page-one">
       <!-- left column -->
       <div class="left-column">
         <div class="first"></div>
