--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Accumulative Dose</title>
   <link rel="stylesheet" href="css/style.css">
+
+  <meta property='og:title' content='Accumulative Dose'/>
+  <meta property='og:image' content='https://images.squarespace-cdn.com/content/v1/57902faa59cc68a958c59c03/1622316155756-ZY23MGRHY4IMSZT9N4GV/accumulative-dose-title-transparent.png?format=750w'/>
+  <meta property='og:description' content='Escape if you can! A radiological event has occurred and you have to find your way out. Pick up items along the way that may help or harm you. When you've accumulate too much radiation it's game over.'/>
+
   <script defer src="js/script.js"></script>
 </head>
 <body>
